--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fastclick": "^1.0.6",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "lib-flexible": "^0.3.2",
     "style-loader": "^0.20.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
